force-app/main/default/objects/RD_ShopRangeValues__c/RD_ShopRangeValues__c.object-meta.xml
<CustomObject>
    <label>RD ShopRangeValues</label>
    <nameField>
        <label>RD ShopRangeValues</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD ShopRangeValues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>