force-app/main/default/objects/RD_ShopRangeValues__c/fields/ShopRngBottomAdd__c.field-meta.xml
<CustomField>
    <fullName>ShopRngBottomAdd__c</fullName>
    <label>ShopRngBottomAdd</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>