force-app/main/default/objects/RD_ShopRangeValues__c/fields/ShopRngBottomMulti__c.field-meta.xml
<CustomField>
    <fullName>ShopRngBottomMulti__c</fullName>
    <label>ShopRngBottomMulti</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>