force-app/main/default/objects/RD_ShopRangeValues__c/fields/ShopRngPressLL__c.field-meta.xml
<CustomField>
    <fullName>ShopRngPressLL__c</fullName>
    <label>ShopRngPressLL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>