force-app/main/default/objects/RD_ShopRangeValues__c/fields/ShopRngTopMulti__c.field-meta.xml
<CustomField>
    <fullName>ShopRngTopMulti__c</fullName>
    <label>ShopRngTopMulti</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>